fix overflow reviews style

--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -2,6 +2,7 @@
 
 .section-reviews {
   padding: 80px 0;
+  overflow: hidden;
 }
 
 @media screen and (min-width: 768px) {
